--- a/index.html
+++ b/index.html
@@ -5,21 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pride Avatar Generator</title>
     <style>
-        body { margin: 1em; color: #555; font-size: 1.2em; line-height: 1.5; }
+        body { width: 350px; margin: 1em auto; color: #555; font-size: 1.2em; line-height: 1.5; }
         h1 { color: darkslategray; font-size: 1.5em; }
-        form { width: 350px; margin: 0 auto; }
         .slider-wrapper { width: 20px; height: 200px; padding: 0; float: right; }
         .slider-wrapper input { width: 200px; height: 20px; margin-top: 50px;
             transform-origin: top left; transform: rotate(90deg); }
         #rotate { width: 200px; margin-left: 50px; }
-        #download { color: black; text-decoration: none; }
-        #download:hover { text-decoration: underline; }
+        #download { color: black; }
+        a:link { text-decoration: none; }
+        a:hover { text-decoration: underline; }
+        footer { margin-top: 2rem; font-size: 0.8rem; color: #555;
+            opacity: 0.3; transition: all 0.2s ease-in-out; }
+        footer:hover { opacity: 1; }
+        footer a { color: black; }
     </style>
     <script src="pride.js" defer async></script>
   </head>
   <body>
     <form>
-        <h1>Pride Avatar Generator</h1>
+        <header><h1>Pride Avatar Generator</h1></header>
         <div class="slider-wrapper">
             <input id="scale" type="range" min="0.5" max="1.5" step="any" value="1">
         </div>
@@ -33,5 +37,8 @@
         </p>
         <p><a id="download" download="pride-avatar.jpg">&gt; Save as JPEG</a></p>
     </form>
+    <footer>
+        | Fork me on <a href="https://github.com/sorz/prideavatar/">GitHub</a> |
+    </footer>
   </body>
 </html>
