--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <input id='file' type='file' accept='image/*'>
         <p>
             <label><input type="radio" name="color" value="standard" checked>Standard</label>
-            <label><input type="radio" name="color" value="light">Light</label>
+            <label><input type="radio" name="color" value="modern">Modern</label>
             <label><input type="radio" name="color" value="trans">Trans</label>
         </p>
         <p><a id="download" download="pride-avatar.jpg">&gt; Save as JPEG</a></p>
