--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             opacity: 0.3; transition: all 0.2s ease-in-out; }
         footer:hover { opacity: 1; }
         footer a { color: black; }
+        #colors label { display: inline-block; }
     </style>
     <script src="pride.js" defer async></script>
   </head>
@@ -30,10 +31,11 @@
         <canvas id="canvas" width="300px" height="300px"></canvas>
         <input id="rotate" type="range" min="-90" max="90" step="any" value="-30">
         <input id='file' type='file' accept='image/*'>
-        <p>
+        <p id="colors">
             <label><input type="radio" name="color" value="standard" checked>Standard</label>
             <label><input type="radio" name="color" value="modern">Modern</label>
             <label><input type="radio" name="color" value="trans">Trans</label>
+            <label><input type="radio" name="color" value="enby">Enby</label>
         </p>
         <p><a id="download" download="pride-avatar.jpg">&gt; Save as JPEG</a></p>
     </form>
