Add wikipedia links on footer

--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
         <p><a id="download" download="pride-avatar.jpg">&gt; Save as JPEG</a></p>
     </form>
     <footer>
-        | Fork me on <a href="https://github.com/sorz/prideavatar/">GitHub</a> |
+        | Fork me on <a href="https://github.com/sorz/prideavatar/">GitHub</a>
+        | <a href="https://en.wikipedia.org/wiki/LGBT" title="LGBT">LGBT</a>
+        | <a href="https://en.wikipedia.org/wiki/Transgender" title="Transgender">Trans</a>
+        | <a href="https://en.wikipedia.org/wiki/Genderqueer" title="Genderqueer">Enby</a>
+        | <a href="https://en.wikipedia.org/wiki/Asexuality" title="Asexuality">Ace</a>
+        | <a href="https://en.wikipedia.org/wiki/Pansexuality" title="Pansexuality">Pan</a>
+        |
     </footer>
   </body>
 </html>
