Refactor: split stylesheet from HTML

--- a/index.html
+++ b/index.html
@@ -4,22 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pride Avatar Generator</title>
-    <style>
-        body { width: 350px; margin: 1em auto; color: #555; font-size: 1.2em; line-height: 1.5; }
-        h1 { color: darkslategray; font-size: 1.5em; }
-        .slider-wrapper { width: 20px; height: 200px; padding: 0; float: right; }
-        .slider-wrapper input { width: 200px; height: 20px; margin-top: 50px;
-            transform-origin: top left; transform: rotate(90deg); }
-        #rotate { width: 200px; margin-left: 50px; }
-        #download { color: black; }
-        a:link { text-decoration: none; }
-        a:hover { text-decoration: underline; }
-        footer { margin-top: 2rem; font-size: 0.8rem; color: #555;
-            opacity: 0.3; transition: all 0.2s ease-in-out; }
-        footer:hover { opacity: 1; }
-        footer a { color: black; }
-        #colors label { display: inline-block; text-transform: capitalize; }
-    </style>
+    <link href="pride.css" rel="stylesheet">
     <script src="pride.js" defer async></script>
   </head>
   <body>
