Fix default color scheme

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <input id='file' type='file' accept='image/*'>
         <p id="colors">
             <template id="color-radio">
-                <label><input type="radio" name="color" checked></label>
+                <label><input type="radio" name="color"></label>
             </template>
         </p>
         <p><a id="download" download="pride-avatar.jpg">&gt; Save as JPEG</a></p>
